Upgrade policy-distribution to JUnit 5
Issue-ID: POLICY-4805
Change-Id: I47aaed48f3f05c2f1c5814882386e114dbad0443
Signed-off-by: FrancescoFioraEst <francesco.fiora@est.tech>